--- a/WebContent/views/web/album.zul
+++ b/WebContent/views/web/album.zul
@@ -15,34 +15,34 @@
 			</div>
 			<div class="col s12 text-center detalle">
 				<div sclass="info">
-					<label value="12 "></label>
+					<label value="12 fotos"></label>
 				</div>
-				<span>*</span>
+				<span sclass="fa fa-circle"></span>
 				<div sclass="info">
 					<label value="03/07/2016"></label>
 				</div>
-				<span>*</span>
+				<span sclass="fa fa-circle"></span>
 				<div sclass="info">
 					<label value="lugar"></label>
 				</div>
 			</div>
 			<div class="col s12 text-center citas">
 				<div sclass="divTag">
-					<label value="Tag *"></label>
+					<label value="Tag"></label><span sclass="fa fa-circle"></span>
 				</div>
 				<div sclass="divTag">
-					<label value="Tag *"></label>
+					<label value="Tag"></label><span sclass="fa fa-circle"></span>
 				</div>
 				<div sclass="divTag">
-					<label value="Tag *"></label>
+					<label value="Tag"></label><span sclass="fa fa-circle"></span>
 				</div>
 			</div>
 			<div class="col s12 descrip">
 				<label
-					value="Reina en mi espíritu una alegría admirable, muy parecida a las dulces alboradas de la primavera, de que gozo aquí con delicia. Estoy solo, y me felicito de vivir en este país, el más a propósito para almas como la mía, soy tan dichoso, mi querido amigo, me sojuzga de tal modo la idea de reposar, que no me ocupo de mi arte. Ahora no sabría dibujar, ni siquiera hacer una línea con el lápiz; y, sin e">
+					value="Reina en mi espíritu una alegría admirable, muy parecida a las dulces alboradas de la primavera, de que gozo aquí con delicia. Estoy solo, y me felicito de vivir en este país, el más a propósito para almas como la mía, soy tan dichoso, mi querido amigo, me sojuzga de tal modo la idea de reposar, que no me ocupo de mi arte. Ahora no sabría dibujar, ni siquiera hacer una línea con el lápiz; y, sin">
 				</label>
 			</div>
-			<div class="col s12">
+			<div class="col s12 fotos">
 				<n:div id="fotos">
 					<div class="row">
 						<div class="col s12">
@@ -94,6 +94,56 @@
 			</div>
 			<div class="col s12 comentarios">
 				<n:h4>Comentarios</n:h4>
+				<div class="row">
+					<div class="col s12">
+						<label
+							value="Reina en mi espíritu una alegría admirable, muy parecida a las dulces alboradas de la primavera, de que gozo aquí con delicia. Estoy solo, y me felicito de vivir en este país, el más a propósito para almas como la mía, soy tan dichoso, mi querido amigo, me sojuzga de tal modo la idea de reposar, que no me ocupo de mi arte. Ahora no sabría dibujar, ni siquiera hacer una línea con el lápiz; y, sin">
+						</label>
+					</div>
+					<div class="col s12 star-mail">
+						<span sclass="fa fa-star-o fa-2x"></span>
+						<span sclass="fa fa-star-o fa-2x"></span>
+						<span sclass="fa fa-star-o fa-2x"></span>
+						<span sclass="fa fa-star-o fa-2x"></span>
+						<span sclass="fa fa-star fa-2x"></span>
+						<span class="email">maria@gmail.com</span>
+					</div>	
+				</div>	
+				<div class="row">
+					<div class="col s12">
+						<label
+							value="Reina en mi espíritu una alegría admirable, muy parecida a las dulces alboradas de la primavera, de que gozo aquí con delicia. Estoy solo, y me felicito de vivir en este país, el más a propósito para almas como la mía, soy tan dichoso, mi querido amigo, me sojuzga de tal modo la idea de reposar, que no me ocupo de mi arte. Ahora no sabría dibujar, ni siquiera hacer una línea con el lápiz; y, sin">
+						</label>
+					</div>
+					<div class="col s12 star-mail">
+						<span sclass="fa fa-star-o fa-2x"></span>
+						<span sclass="fa fa-star-o fa-2x"></span>
+						<span sclass="fa fa-star fa-2x"></span>
+						<span sclass="fa fa-star-o fa-2x"></span>
+						<span sclass="fa fa-star-o fa-2x"></span>						
+						<span class="email">pedro@gmail.com</span>
+					</div>							
+				</div>		
+				<div class="row">
+					<div class="col s12">
+						<label
+							value="Ahora no sabría dibujar, ni siquiera hacer una línea con el lápiz; y, sin">
+						</label>
+					</div>
+					<div class="col s12 star-mail">
+						<span sclass="fa fa-star-o fa-2x"></span>
+						<span sclass="fa fa-star fa-2x"></span>
+						<span sclass="fa fa-star-o fa-2x"></span>
+						<span sclass="fa fa-star-o fa-2x"></span>
+						<span sclass="fa fa-star-o fa-2x"></span>
+						<span class="email">annitagil@gmail.com</span>
+					</div>								
+				</div>
+				<div class="col s12">
+					<button class="waves-effect waves-light btn" href="">
+						ver mas
+					</button>
+				</div>				
 			</div>
 		</div>
 	</div>
